# 7inarow

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPLEXITY.md  README.md
src/: main.cpp
src/core/: Board.cpp  Board.h  Edges.cpp  Edges.h  Game.cpp  Game.h
src/metrics/: Potential.cpp  Potential.h
src/util/: Cli.cpp  Cli.h  Format.cpp  Format.h
tests/: test_edges.cpp  test_framework.h  test_main.cpp  test_potential.cpp
